<resources>
    <string name="app_name">Synonyms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_title">Править</string>
    <string name="notes_title">Заметки</string>
    <string name="button_l">L</string>
    <string name="delete_all_title">Удалить всё</string>
    <string name="lexeme_title">Лексемы</string>
    <string name="forms_title">Словоформы</string>
    <string name="root_title">Однокоренные</string>
    <string name="syns_title">Синонимы</string>
</resources>